--- a/starweb/app/assets/stylesheets/application.css.erb
+++ b/starweb/app/assets/stylesheets/application.css.erb
@@ -10,9 +10,8 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require bootstrap.css
- *= require css/materialize.min.css	
- *= require custom-styles.css
+ *= require bootstrap.min.css
+ *= require style.css
  *= require_tree .
  *= require_self
  */
