--- a/starweb/app/views/layouts/application.html.erb
+++ b/starweb/app/views/layouts/application.html.erb
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Starweb</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta charset="utf-8">
+    <meta name="description" content="Descripción de la página">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Starwerb</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Google Fonts-->
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css' />
-    
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>   
+    <link href="https://fonts.googleapis.com/css?family=Muli|Raleway&display=swap" rel="stylesheet">
 
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 
 <body>
-    <div id="wrapper">
-        <%= render "partials/navigation" %>
-        <% if user_signed_in?%>
-        <div id="page-wrapper" <% if current_user.is_team? %>style="margin-left: 0px"<%end%>>
-        <% else %>
-        <div id="page-wrapper-login">
-        <%end%>
-            <% unless notice.nil? %>
-                <p class="alert alert-success"><%= notice %></p>
-            <%end%>
-            <% unless alert.nil? %>
-                <p class="alert alert-warning"><%= alert %></p>
-            <%end%>
-            <%= yield %>
-            <%= render "partials/footer" %>
-        </div>
-    </div>
-    
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <div class="d-flex" id="wrapper">
+    <%= render "partials/navigation" %>
+    <%= yield %>
+    <%= render "partials/footer" %>
+ 
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  </div>
 </body>
 </html>
