--- a/starweb/app/views/partials/_footer.html.erb
+++ b/starweb/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer>
-	<p>&copy StarWeb - 2019</p>
-</footer>
-
+    <footer class="text-center p-3">
+        &copy StarWeb - 2019
+    </footer>
+</div>
