--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -1,183 +1,42 @@
-<% if user_signed_in? %>
+<!-- Sidebar -->
+<div class="border-right" id="sidebar-wrapper">
+  <div class="sidebar-heading"><i class="fas fa-futbol"></i>STARWEB </div>
+  <div class="list-group list-group-flush">
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-calendar-week fa-2x"></i></a>
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-utensils fa-2x"></i></a>
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-hand-holding-usd fa-2x"></i></a>
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-tasks fa-2x"></i></a>
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-users fa-2x"></i></a>
+    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-chart-line fa-2x"></i></a>
+  </div>
+</div>
+<!-- /#sidebar-wrapper -->
 
-<nav class="navbar navbar-default top-navbar" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle waves-effect waves-dark" data-toggle="collapse" data-target=".sidebar-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
+<!-- Page Content -->
+<div id="page-content-wrapper">
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <%= link_to(raw("<i class='fas fa-volleyball-ball '></i> StarWeb"), root_path, class: "navbar-brand waves-effect waves-dark") %>
 
-
-    <% if !current_user.is_team? %>
-      <div id="sideNav" href=""><i class="material-icons dp48">toc</i></div>
-    <% end %>
-  </div>
-
-  <ul class="nav navbar-top-links navbar-right"> 
-    <li><a class="dropdown-button waves-effect waves-dark" data-activates="dropdown4"><i class="fa fa-envelope fa-fw"></i> <i class="material-icons right">arrow_drop_down</i></a></li>       
-    <li><a class="dropdown-button waves-effect waves-dark" data-activates="dropdown3"><i class="fa fa-tasks fa-fw"></i> <i class="material-icons right">arrow_drop_down</i></a></li>
-    <li><a class="dropdown-button waves-effect waves-dark" data-activates="dropdown1"><i class="fa fa-user fa-fw"></i> <b><%= current_user.email %></b> <i class="material-icons right">arrow_drop_down</i></a></li>
-  </ul>
-</nav>
-
-<% if !current_user.is_team? %>
-<nav class="navbar-default navbar-side" role="navigation">
-  <div class="sidebar-collapse">
-    <ul class="nav" id="main-menu">
-      <% if current_user.is_team? || current_user.is_admin? %>
-      <li>
-        <%= link_to(raw("<i class='fas fa-tasks '></i> Pedidos"), orders_path, class: "waves-effect waves-dark") %>
-      </li>
-      <% end %>
-
-      <% if current_user.is_secretary? %>
-      <li>
-        <%= link_to(raw("<i class='fas fa-tasks '></i> Pedidos"), orders_path, class: "waves-effect waves-dark") %>
-      </li>
-
-      <li>
-        <%= link_to(raw("<i class='fas fa-tshirt '></i> Productos"), products_path, class: "waves-effect waves-dark") %>
-      </li>
-
-      <li>
-        <%= link_to(raw("<i class='fas fa-user-friends '></i> Clientes"), clients_path, class: "waves-effect waves-dark") %>
-      </li>
-
-      <li>
-        <%= link_to(raw("<i class='fas fa-boxes '></i> Insumos"), supplies_path, class: "waves-effect waves-dark") %>
-      </li>
-
-      <li>
-        <%= link_to(raw("<i class='fas fa-hands-helping '></i> Auspiciantes"), sponsors_path, class: "waves-effect waves-dark") %>
-      </li>
-
-      <% end %>
-
-      <% if current_user.is_admin? %>
-        <li>
-          <%= link_to(raw("<i class='fa fa-file-alt'></i> Reportes"), '/reports/index', class: "waves-effect waves-dark") %>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fas fa-user"></i> Admin
+          </a>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
         </li>
-        <li>
-          <%= link_to(raw("<i class='fa fa-user'></i> Usuarios"), '/users/index', class: "waves-effect waves-dark") %>
-        </li>
-      <% end %>
-    </ul>
-
-  </div>
-
-</nav>
-<!-- /. NAV SIDE  -->
-
-<% end %>
-<!-- Dropdown Structure -->
-<ul id="dropdown1" class="dropdown-content">
-  <li><a href="#"><i class="fa fa-user fa-fw"></i> My Profile</a>
-  </li>
-  <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-  </li> 
-  <li><%= link_to(raw("<i class='fa fa-sign-out fa-fw'></i> Cerrar sesión"), destroy_user_session_path, method: :delete, class: "waves-effect waves-dark")%>
-  </li>
-</ul>
-
-<ul id="dropdown3" class="dropdown-content dropdown-tasks w250">
-  <li>
-    <a href="#">
-      <div>
-        <p>
-          <strong>Task 1</strong>
-          <span class="pull-right text-muted">60% Complete</span>
-        </p>
-        <div class="progress progress-striped active">
-          <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-            <span class="sr-only">60% Complete (success)</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li class="divider"></li>
-  <li>
-    <a href="#">
-      <div>
-        <p>
-          <strong>Task 2</strong>
-          <span class="pull-right text-muted">28% Complete</span>
-        </p>
-        <div class="progress progress-striped active">
-          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="28" aria-valuemin="0" aria-valuemax="100" style="width: 28%">
-            <span class="sr-only">28% Complete</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li class="divider"></li>
-  <li>
-    <a href="#">
-      <div>
-        <p>
-          <strong>Task 3</strong>
-          <span class="pull-right text-muted">60% Complete</span>
-        </p>
-        <div class="progress progress-striped active">
-          <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
-            <span class="sr-only">60% Complete (warning)</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li class="divider"></li>
-  <li>
-    <a href="#">
-      <div>
-        <p>
-          <strong>Task 4</strong>
-          <span class="pull-right text-muted">85% Complete</span>
-        </p>
-        <div class="progress progress-striped active">
-          <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%">
-            <span class="sr-only">85% Complete (danger)</span>
-          </div>
-        </div>
-      </div>
-    </a>
-  </li>
-  <li class="divider"></li>
-  <li>
-  </ul> 
-
-  <ul id="dropdown4" class="dropdown-content dropdown-tasks w250 taskList">
-    <li>
-      <div>
-        <strong>John Doe</strong>
-        <span class="pull-right text-muted">
-          <em>Today</em>
-        </span>
-      </div>
-      <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...</p>
-    </a>
-  </li>
-  <li class="divider"></li>
-  <li>
-    <div>
-      <strong>John Smith</strong>
-      <span class="pull-right text-muted">
-        <em>Yesterday</em>
-      </span>
+      </ul>
     </div>
-    <p>Lorem Ipsum has been the industry's standard dummy text ever since an kwilnw...</p>
-  </a>
-</li>
-<li class="divider"></li>
-<li>
-  <a class="text-center" href="#">
-    <strong>Read All Messages</strong>
-    <i class="fa fa-angle-right"></i>
-  </a>
-</li>
-</ul>
-<%end%>
+  </nav>
+
+  <div class="container-fluid p-4">
+    <div class="mt-3">
