Mejoras visuales - Template listo

--- a/starweb/app/views/partials/_footer.html.erb
+++ b/starweb/app/views/partials/_footer.html.erb
@@ -1,4 +1,6 @@
-    <footer class="text-center p-3">
-        &copy StarWeb - 2019
-    </footer>
+    <!-- /Content-->
+    </div>
+
+    <!-- /#page-content-wrapper -->
+    <footer class="text-center p-3">&copy StarWeb - 2019</footer>
 </div>
