--- a/starweb/app/views/partials/_navigation.html.erb
+++ b/starweb/app/views/partials/_navigation.html.erb
@@ -1,41 +1,34 @@
 <!-- Sidebar -->
 <div class="border-right" id="sidebar-wrapper">
-  <div class="sidebar-heading"><i class="fas fa-futbol"></i>STARWEB </div>
+  <div class="sidebar-heading"><i class="fas fa-futbol"></i>STARWEB</div>
   <div class="list-group list-group-flush">
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-calendar-week fa-2x"></i></a>
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-utensils fa-2x"></i></a>
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-hand-holding-usd fa-2x"></i></a>
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-tasks fa-2x"></i></a>
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-users fa-2x"></i></a>
-    <a href="#" class="list-group-item list-group-item-action"><i class="fas fa-chart-line fa-2x"></i></a>
+    <%= link_to(raw("<i class='fas fa-tasks fa-2x '></i><br>Pedidos"), orders_path, class: "list-group-item list-group-item-action") %>
+    <%= link_to(raw("<i class='fas fa-tshirt fa-2x '></i><br>Productos"), products_path, class: "list-group-item list-group-item-action") %>
+    <%= link_to(raw("<i class='fas fa-user-friends fa-2x '></i><br>Clientes"), clients_path, class: "list-group-item list-group-item-action") %>
+    <%= link_to(raw("<i class='fas fa-boxes fa-2x '></i><br>Insumos"), supplies_path, class: "list-group-item list-group-item-action") %>
+    <%= link_to(raw("<i class='fas fa-hands-helping fa-2x '></i><br>Auspiciantes"), sponsors_path, class: "list-group-item list-group-item-action") %>
   </div>
 </div>
+
 <!-- /#sidebar-wrapper -->
 
 <!-- Page Content -->
 <div id="page-content-wrapper">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user"></i> Admin
-          </a>
-          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
-      </ul>
-    </div>
+  <nav class="navbar navbar-expand navbar-light bg-light">
+      <div class="nav navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fas fa-user mr-2"></i> Admin
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+      </div>
   </nav>
 
   <div class="container-fluid p-4">
