--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -1,7 +1,7 @@
 /* Color palette */
-$color-primary: #10455b;
-$color-secondary: #2aa1af;
-$color-tertiary: #e2f0f1;
+$color-primary: #590505;
+$color-secondary:#8C2B2B;
+$color-tertiary: #eeeeee;
 $color-quaternary: #ffffff;
 
 * {
@@ -14,6 +14,13 @@ body {
   overflow-x: hidden;
 }
 
+.form-signin {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
 .card {
   text-align: center;
   display: inline-block;
@@ -21,14 +28,9 @@ body {
   border: 1px solid #5f7c9a;
 }
 
-#logo {
-  width: 45px;
-  padding-right: 3px;
-}
-
 .bg-light, .sidebar-heading {
-  background-color: $color-tertiary !important;
-  height: 75px;
+  background-color: #eeeeee !important;
+  border-bottom: 0.001rem solid #d8d4d4;
 }
 
 footer {
@@ -49,10 +51,11 @@ footer {
 
   .sidebar-heading {
     text-align: center;
-    letter-spacing: 3px;
-    font-size: 20px !important;
+    font-size: 16px !important;
     padding: 2px;
     font-family: 'Raleway', sans-serif;
+    background-color: $color-primary !important;
+    color: $color-quaternary;
   }
 
   .list-group {
@@ -62,6 +65,8 @@ footer {
       background-color: $color-primary;
       color: $color-quaternary;
       border: none;
+      font-size: 14px;
+      padding: 7px;
 
       &:hover {
         background-color: $color-secondary;
