--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -1,12 +1,12 @@
-<div class="header"> 
-  <h1 class="page-header">
-    Clientes
-  </h1>
+<h1>Clientes</h1>
+<nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li><a href="#">Clientes</a></li>
-    <li class="active">Index</a></li>
-  </ol> 
+    <li class="breadcrumb-item"><a href="#">Clientes</a></li>
+    <li class="breadcrumb-item active" aria-current="page">Index</li>
+  </ol>
+</nav>
 </div>
+<hr>
 
 <div id="page-inner">
   <%= link_to 'Nuevo', new_client_path, class: 'btn btn-primary' %>
