--- a/starweb/app/views/layouts/application.html.erb
+++ b/starweb/app/views/layouts/application.html.erb
@@ -18,6 +18,16 @@
 <body>
   <div class="d-flex" id="wrapper">
     <%= render "partials/navigation" %>
+    <% unless notice.nil? %>
+          <div class="alert alert-success" role="alert">
+            <p class="notice"><%= notice %></p>
+          </div>
+        <%end%>
+        <% unless alert.nil? %>
+          <div class="alert alert-warning" role="alert">
+            <p class="alert"><%= alert %></p>
+          </div>
+        <%end%>
     <%= yield %>
     <%= render "partials/footer" %>
   </div>
