--- a/starweb/app/views/partials/_footer.html.erb
+++ b/starweb/app/views/partials/_footer.html.erb
@@ -1,6 +1,7 @@
     <!-- /Content-->
     </div>
-
-    <!-- /#page-content-wrapper -->
-    <footer class="text-center p-3">&copy StarWeb - 2019</footer>
-</div>
+<% if user_signed_in?%>
+        <!-- /#page-content-wrapper -->
+        <footer class="text-center p-3">&copy StarWeb - 2019</footer>
+    </div>
+<%end%>
