--- a/starweb/app/assets/stylesheets/style.scss
+++ b/starweb/app/assets/stylesheets/style.scss
@@ -1,6 +1,6 @@
 /* Color palette */
-$color-primary: #080813;
-$color-secondary:#777777;
+$color-primary: #5a6d80;
+$color-secondary:#4673a7; 
 $color-tertiary: #994848;
 $color-quaternary: #ffffff;
 
@@ -13,7 +13,7 @@ body {
   max-width: 330px;
   padding: 15px;
   margin: auto;
-  background-color: $color-secondary;
+  background-color: #d8d8d8;;
   border-radius: 10px;
 }
 
@@ -26,6 +26,15 @@ body {
 
 }
 
+p {
+  margin-top: 1rem;
+}
+
+.login {
+  padding: .10rem 1.25rem;
+  font-size: 15px;
+}
+
 .card {
   text-align: center;
   display: inline-block;
@@ -36,6 +45,7 @@ body {
 .bg-light {
   background-color: $color-secondary !important;
   height: 65px;
+  box-shadow: 11px -12px 46px 2px rgba(0,0,0,0.51);
 }
 
 #page-content-wrapper {
@@ -48,12 +58,14 @@ body {
 
 #sidebar-wrapper {
   color: $color-tertiary;
+  border-right: 1px solid #d1d1d1 !important;
   min-height: 100vh;
   background-color: $color-primary;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
   transition: margin .25s ease-out;
+  box-shadow: -37px 10px 91px 0px rgba(0,0,0,0.75);
 
   .sidebar-heading {
     text-align: center;
@@ -63,7 +75,7 @@ body {
     font-family: 'Raleway', sans-serif;
     background-color: $color-primary !important;
     color: $color-quaternary;
-    border-bottom: 1px solid #ffffff;
+    border-bottom: 1px solid #d1d1d1;
   }
 
   .list-group {
@@ -77,7 +89,8 @@ body {
       padding: 7px;
 
       &:hover {
-        background-color: $color-tertiary;
+        background-color: $color-quaternary;
+        color: #485e74;
       }
     }
   }
