--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -12,6 +12,7 @@
 <%= link_to 'Nuevo', new_order_path, class: 'btn btn-primary'%>
 <% end %>
 <!-- Content -->
+<%= link_to 'Nuevo', new_order_path, class: 'btn btn-primary' %>
 <div class="row">
   <% @orders.each do |order| %>
     <div class="col-md-4 col-sm-6">
